--- a/styles/globals.css
+++ b/styles/globals.css
@@ -484,3 +484,9 @@ abbr[title] {
     background: white;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.12);
 }
+
+.text-editor-wrapper {
+    background: white;
+    padding-left: 16px;
+    padding-right: 16px;
+}
